fix: nav-spacing xl

--- a/css/style.css
+++ b/css/style.css
@@ -477,28 +477,42 @@ input.theme-btn {
   max-width: 100%;
   margin: 0 150px;
 }
-@media only screen and (min-width: 1200px) and (max-width: 1700px) {
+@media (max-width: 1400px) {
   .custom-container {
-    max-width: 1140px;
-    margin: 0 auto;
     padding-right: 0.75rem;
     padding-left: 0.75rem;
   }
 }
-@media only screen and (min-width: 992px) and (max-width: 1199px) {
+@media (min-width: 576px) {
+  .custom-container {
+    max-width: 540px;
+    margin: 0 auto;
+  }
+}
+@media (min-width: 768px) {
+  .custom-container {
+    max-width: 720px;
+    margin: 0 auto;
+  }
+}
+@media (min-width: 992px) {
   .custom-container {
     max-width: 960px;
     margin: 0 auto;
-    padding-right: 0.75rem;
-    padding-left: 0.75rem;
   }
 }
-@media (max-width: 767px) {
+@media (min-width: 1200px) {
   .custom-container {
-    margin: 0 20px;
+    max-width: 1140px;
+    margin: 0 auto;
   }
 }
-
+@media (min-width: 1400px) {
+  .custom-container {
+    max-width: 1323px;
+    margin: 0 auto;
+  }
+}
 .certified {
   position: relative;
 }
@@ -3387,7 +3401,7 @@ body.admin-bar .header-menu-area.sticky_menu {
 .header-menu-area-inner {
   padding: 0px 24px;
 }
-@media (max-width: 1281px) {
+@media (max-width: 1700px) {
   .header-menu-area-inner {
     padding: 0;
   }
@@ -3407,7 +3421,7 @@ body.admin-bar .header-menu-area.sticky_menu {
   justify-content: space-between;
   padding: 0 24px;
 }
-@media only screen and (min-width: 992px) and (max-width: 1199px) {
+@media (max-width: 1700px) {
   .header-top .header-top-inner {
     padding: 0;
   }
